error occured in index,js--> TypeError: Cannot set properties of undefined (setting 'short_content')

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,8 +6,13 @@
     <title>Edit</title>
 </head>
 <body>
-    <form>
-        <input >
+    <h2>Edit your Blog</h2>
+    <h3>Blog ID: <%= blog.id %></h3>
+    <h3>Blog Title: <%= blog.title %></h3>
+
+    <form method="post" action="/blogs/<%= blog.id %> ?_method=PATCH">
+        <textarea name="short_content"><%= blog.short_content  %></textarea>
+        <button>Submit</button>
     </form>
 </body>
 </html>
