--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <h1>Here Is Cretae a new Blog</h1>
     <form method="post" action="/blogs">
          <input placeholder="Enter Title of Your Blog: " name="title"> <br><br><br>
          <textarea placeholder="Enter Short Contain of Your Blog: "name="short_content"></textarea>
+         <br>
+    <br>
+          <textarea placeholder="Enter Full Contain of Your Blog: "name="full_containt"></textarea>
         <br><br>
         <button>Submit</button>
     </form>
