--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,50 @@ h3{
 p{
     color: rgb(240, 23, 225);
 }
+button{
+    background-color:darkgray;
+}
+
+button:hover{
+    background-color: rgb(234, 8, 8);
+}
+h2{
+    color: crimson;
+    text-decoration: overline;
+    text-align: center;
+    text-transform: uppercase;
+    font-style: oblique;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-variant-ligatures: historical-ligatures;
+}
+h2:hover{
+    color: deepskyblue;
+}
+
+body{
+
+    text-align: left;
+}
+a{
+    text-decoration: none;
+}
+
+.AddBtn{
+    background-color: rgb(201, 133, 201);
+}
+
+.AddBtn:hover{
+    background-color: rgb(99, 214, 92);
+}
+
+@media (max-width: 600px) {
+  .form-container {
+    width: 100%;
+    padding: 10px;
+  }
+  
+  input, textarea, button {
+    font-size: 16px;
+    width: 100%;
+  }
+}
