--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta></title>
      <link rel="stylesheet" href="/style.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <h2>Blogging</h2>
@@ -12,9 +14,11 @@
             <div class="blog">
                 <h1 class="title">Title:<%= blog.title %></h1>
                 <h3 class="short_content">Short Content: <%= blog.short_content %></h3>
+                <!-- <h3 class="full_containt">Short Content: <%= blog.full_containt %></h3> -->
                 <a href="http://localhost:8080/blogs/<%= blog.id %>">Read more</a> &nbsp &nbsp 
                  <a href="http://localhost:8080/blogs/<%= blog.id %>/edit">Edit</a> &nbsp&nbsp&nbsp
                  <form method="POST"action="/blogs/<%= blog.id %>?_method=DELETE">
+                    <br>
                     <button>DELETE BLOG</button>
                  </form>
    
@@ -22,9 +26,8 @@
          <% } %>
    
     <br>
-     <br>
     <br>
-    <a href="http://localhost:8080/blogs/new">Add Blog</a>
+    <a class="AddBtn" href="http://localhost:8080/blogs/new">Add Blog</a>
 
 </body>
 </html>
