--- a/views/read.ejs
+++ b/views/read.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <h1>This is the Full content of Blog page</h1>
@@ -12,10 +14,9 @@
         <h3>User ID:<%= blog.id %> </h3>
         <h1 class="title">Title:<%= blog.title %></h1>
         <h3 class="short_content">Short Content: <%= blog.short_content %></h3>
+        <br>
+    
+         <h3 class="full_containt">Full Containt: <%= blog.full_containt %></h3>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium suscipit ut dignissimos reprehenderit iure ipsum cupiditate, officia voluptates atque, distinctio cumque dolor repellat quo perspiciatis nulla harum est velit!
-    Eaque nisi odio aperiam! Perspiciatis at a dolorem laborum officia quis dignissimos quisquam, modi sed vitae exercitationem, earum laboriosam. Quasi sed aliquid debitis, commodi iusto similique et optio voluptatibus corporis.
-    Nesciunt eius minus nemo exercitationem, deserunt dolorem ipsam ratione beatae, assumenda eum molestiae molestias ex fugiat, adipisci dolore rem tenetur ea libero voluptate debitis reprehenderit. Quidem ab laudantium fuga sed.
-    Iure itaque nihil, a ipsam deserunt autem, libero blanditiis impedit natus consectetur labore accusantium sed magni maxime commodi possimus eligendi placeat explicabo praesentium! Commodi officiis nihil obcaecati dolorum, facilis dolore?</p>
-</body>
+   </body>
 </html>
