--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
                 <h1 class="title">Title:<%= blog.title %></h1>
                 <h3 class="short_content">Short Content: <%= blog.short_content %></h3>
                 <!-- <h3 class="full_containt">Short Content: <%= blog.full_containt %></h3> -->
-                <a href="http://localhost:8080/blogs/<%= blog.id %>">Read more</a> &nbsp &nbsp 
-                 <a href="http://localhost:8080/blogs/<%= blog.id %>/edit">Edit</a> &nbsp&nbsp&nbsp
+                <a href="/blogs/<%= blog.id %>">Read more</a> &nbsp &nbsp 
+                 <a href="/blogs/<%= blog.id %>/edit">Edit</a> &nbsp&nbsp&nbsp
                  <form method="POST"action="/blogs/<%= blog.id %>?_method=DELETE">
                     <br>
                     <button>DELETE BLOG</button>
