fix: Remove hardcoded localhost URLs from links last newblof

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
    
     <br>
     <br>
-    <a class="AddBtn" href="http://localhost:8080/blogs/new">Add Blog</a>
+    <a class="AddBtn" href="/blogs/new">Add Blog</a>
 
 </body>
 </html>
